# RandomHaskellFromR

./: Random.cabal
src/: Example.R  MwcTest.hs  StartEnd.c
